fix: remove gaps around the options bar

--- a/nerdlets/video-session-list/styles.scss
+++ b/nerdlets/video-session-list/styles.scss
@@ -11,9 +11,6 @@
 }
 .header {
   left: 164px;
-  margin-bottom: 20px;
-  padding-top: 20px;
-  border-bottom: 1px solid #e3e4e4;
 }
 .no-session {
   height: 121px;
